<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDFFEE"
    tools:context=".Activities.Login">

    <FrameLayout
        android:id="@+id/f1_header_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/auth_header_image_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"
            android:src="@drawable/logo_background"/>

        <ImageView
            android:layout_width="@dimen/auth_logo_width_size"
            android:layout_height="@dimen/auth_logo_height_size"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_white"
            app:tint="@color/white"/>

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:minHeight="48dp"
        android:text="@string/title_login"
        android:textColor="@color/green"
        android:textSize="@dimen/title_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f1_header_image"
        android:autofillHints="" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_email_id"
        android:textColorHint="@color/green"
        app:boxBackgroundColor="#FFDEEFED"
        app:boxStrokeColor="@color/darkgreen"
        app:boxStrokeErrorColor="@color/darkgreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:padding="@dimen/et_padding"
            android:textColor="@color/green"
            android:textSize="@dimen/et_textSize"
            tools:text="abc@gmail.com" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_password"
        android:textColorHint="@color/green"
        app:boxBackgroundColor="#DEEFED"
        app:boxStrokeColor="@color/darkgreen"
        app:boxStrokeErrorColor="@color/darkgreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:padding="@dimen/et_padding"
            android:textColor="@color/green"
            android:textSize="@dimen/et_textSize"
            tools:text="123456" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:linksClickable="true"
        android:longClickable="true"
        android:minHeight="48dp"
        android:padding="@dimen/clickable_text_view_padding"
        android:text="@string/lbl_forgot_password"
        android:textAlignment="textEnd"
        android:textColor="@color/green"
        android:textSize="@dimen/et_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/btn_padding"
        android:paddingBottom="@dimen/btn_padding"
        android:text="@string/btn_lbl_login"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_text_Size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_don_t_have_an_account"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_margin="16dp"
            android:linksClickable="true"
            android:longClickable="true"
            android:padding="@dimen/clickable_text_view_padding"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/green"
            android:textSize="@dimen/lbl_text_view_textSize" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/register"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="@dimen/et_textSize"
            android:linksClickable="true"
            android:longClickable="true"
            android:padding="@dimen/clickable_text_view_padding"
            android:text="@string/register"
            android:textColor="@color/green"
            android:textSize="@dimen/lbl_text_view_textSize" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>