<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDFFEE"
    tools:context=".Activities.Register">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text="@string/create_an_account"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:textSize="@dimen/toolbar_title_text_size" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_register_activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_first_name"
                android:textColorHint="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/green"
                    android:textSize="@dimen/et_textSize"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_last_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="379dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/hint_last_name"
                    android:textColorHint="@color/green"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/et_first_name">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:padding="@dimen/et_padding"
                        android:textColor="@color/green"
                        android:textSize="@dimen/et_textSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="379dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/et_hint_email_id"
                    android:textColorHint="@color/green"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/et_last_name">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:padding="@dimen/et_padding"
                        android:textColor="@color/green"
                        android:textSize="@dimen/et_textSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="379dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/et_hint_password"
                    android:textColorHint="@color/green"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/et_email">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:padding="@dimen/et_padding"
                        android:textColor="@color/green"
                        android:textSize="@dimen/et_textSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_confirm_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="379dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/et_hint_confirm_password"
                    android:textColorHint="@color/green"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/et_password">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:padding="@dimen/et_padding"
                        android:textColor="@color/green"
                        android:textSize="@dimen/et_textSize" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/terms_and_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/til_confirm_password">
                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@id/terms_and_condition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:checked="false"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_terms_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/txt_terms_condition_marginStart"
                    android:text="@string/i_agree_to_the_terms_and_condition"
                    android:textColor="@color/green"
                    android:textSize="@dimen/txt_terms_condition_textSize"/>
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton

                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/button_background"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="@dimen/btn_padding"
                    android:paddingBottom="@dimen/btn_padding"
                    android:text="@string/btn_lbl_register"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btn_text_Size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_terms_condition"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_register">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_all_ready_have_an_account"
                        android:layout_width="200dp"
                        android:layout_height="35dp"
                        android:layout_margin="16dp"
                        android:linksClickable="true"
                        android:longClickable="true"
                        android:padding="@dimen/clickable_text_view_padding"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="@color/green"
                        android:textSize="@dimen/lbl_text_view_textSize" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="@dimen/et_textSize"
                        android:linksClickable="true"
                        android:longClickable="true"
                        android:padding="@dimen/clickable_text_view_padding"
                        android:text="@string/login"
                        android:textColor="@color/green"
                        android:textSize="@dimen/lbl_text_view_textSize" />
                </LinearLayout>

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>